--- a/yummy/index.html
+++ b/yummy/index.html
@@ -24,13 +24,15 @@
 <header class="header_area container-fluid">
   <!--Top Header Area-->
   <!-- Top header-->
-  <div class="top_header_area container-fuild">
-    <div class="row container">
-      <div class="col-5 col-sm-5">
-        <!-- icon-->
+  <div class="top navbar text-white">
+    <div class="container-fluid top-content">
+      <ul class="nav top-left">
+        <li class="nav-item"><span class="fas fa-map-marker-alt"></span> Tây Hồ Hà Nội</li>
+        <li class="nav-item mr-menu"><span class="fas fa-mobile-alt"></span>0366312255</li>
+      </ul>
+      <ul class="nav top-right">
         <div class="top_social_bar"><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a><a href="#"><i class="fab fa-skype" aria-hidden="true"></i></a><a href="#"><i class="fab fa-dribbble" aria-hidden="true"></i></a></div>
-      </div>
-      <div class="col-7 col-sm-7"></div>
+      </ul>
     </div>
   </div>
   <!-- Menu-->
@@ -39,11 +41,11 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">TRANG CHỦ</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">GIỚI THIỆU</a></li>
-          <li class="nav-item"><a class="nav-link" href="menu.html">THỰC ĐƠN</a></li>
-          <li class="nav-item"><a class="nav-link" href="blog.html">BÀI VIẾT</a></li>
-          <li class="nav-item"><a class="nav-link" href="shop.html">CỬA HÀNG</a></li>
+          <li class="nav-item"><a class="page_1 nav-link" href="index.html">TRANG CHỦ</a></li>
+          <li class="nav-item"><a class="page_2 nav-link" href="about.html">GIỚI THIỆU</a></li>
+          <li class="nav-item"><a class="page_3 nav-link" href="menu.html">THỰC ĐƠN</a></li>
+          <li class="nav-item"><a class="page_4 nav-link" href="blog.html">BÀI VIẾT</a></li>
+          <li class="nav-item"><a class="page_5 nav-link" href="shop.html">CỬA HÀNG</a></li>
           <li class="nav-item-sp"><a class="nav-link nav-border" href="reservation.html">ĐẶT BÀN</a></li>
           <li class="nav-item-sp"><a class="nav-link nav-icon" href="cart.html"><i class="fas fa-cart-plus"></i></a></li>
           <li class="nav-item-sp"><a class="nav-link nav-icon" href="#"><i class="fas fa-search"></i></a></li>
@@ -83,20 +85,20 @@
           </div>
           <div class="carousel-item">
             <div class="chef_content row">
-              <div class="col-4 avatar_chef"><img src="images/home_Page/chef_small.png" alt="chef"></div>
+              <div class="col-4 avatar_chef"><img src="images/home_Page/chef_1.png" alt="chef"></div>
               <div class="col-8 name_chef">
-                <p class="name">Kano Kun</p>
-                <p class="role">Bếp trưởng</p>
+                <p class="name">Taro Yuki</p>
+                <p class="role">Bếp phó</p>
               </div>
             </div>
             <p class="content">Với 20 năm kinh nghiệm của mình ở các nước trên toàn thế giới, tôi sẽ mang tới những hương vị tuyệt vời nhất cho bạn!</p>
           </div>
           <div class="carousel-item">
             <div class="chef_content row">
-              <div class="col-4 avatar_chef"><img src="images/home_Page/chef_small.png" alt="chef"></div>
+              <div class="col-4 avatar_chef"><img src="images/home_Page/chef_2.png" alt="chef"></div>
               <div class="col-8 name_chef">
-                <p class="name">Kano Kun</p>
-                <p class="role">Bếp trưởng</p>
+                <p class="name">Hana Yuki</p>
+                <p class="role">Bếp phó</p>
               </div>
             </div>
             <p class="content">Với 20 năm kinh nghiệm của mình ở các nước trên toàn thế giới, tôi sẽ mang tới những hương vị tuyệt vời nhất cho bạn!        </p>
@@ -117,7 +119,7 @@
     <div class="menu_section_2">
       <nav class="navbar">
         <ul class="navbar-nav d-flex flex-row">
-          <li class="nav-item"><a class="nav-link" href="#">TẤT CẢ</a></li>
+          <li class="nav-item"><a class="nav-link" href="shop.html">TẤT CẢ</a></li>
           <li class="nav-item"><a class="nav-link" href="#">THỊT</a></li>
           <li class="nav-item"><a class="nav-link" href="#">CÁ</a></li>
           <li class="nav-item"><a class="nav-link" href="#">RAU CỦ</a></li>
@@ -130,28 +132,28 @@
   <div class="list_image">
     <div class="child-page-listing">
       <div class="grid-container">
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
-          <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img1.jpg" alt="Xem chi tiết"></a></div>
-        </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
-          <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img2.jpg" alt="Xem chi tiết"></a></div>
-        </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
-          <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img3.jpg" alt="Xem chi tiết"></a></div>
-        </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
-          <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img4.jpg" alt="Xem chi tiết"></a></div>
-        </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
-          <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img5.jpg" alt="Xem chi tiết"></a></div>
-        </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
+        <article class="location-listing" id="3685"><a class="location-title" href="singerProduct.html">Bít tết bò Kobe </a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img6.jpg" alt="Xem chi tiết"></a></div>
         </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Bánh mì 4 tê</a>
+          <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img2.jpg" alt="Xem chi tiết"></a></div>
+        </article>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Kem sữa dừa</a>
+          <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img3.jpg" alt="Xem chi tiết"></a></div>
+        </article>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Khoai tây chiên</a>
+          <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img4.jpg" alt="Xem chi tiết"></a></div>
+        </article>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Xúc xích</a>
+          <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img5.jpg" alt="Xem chi tiết"></a></div>
+        </article>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Dâu tây</a>
+          <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img1.jpg" alt="Xem chi tiết"></a></div>
+        </article>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Cá hòi Châu Phi</a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img7.jpg" alt="Xem chi tiết"></a></div>
         </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Canh ngô hầm bí</a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img8.jpg" alt="Xem chi tiết"></a></div>
         </article>
       </div>
@@ -169,19 +171,19 @@
     <div class="row text-center">
       <div class="col-3 service"><img src="./images/section3/Rectangle1.png" alt="">
         <p class="title">Bữa Sáng</p>
-        <p class="content">Khởi động một ngày mới tràn đầy năng lượng</p>
+        <p class="content">Khởi động ngày mới tràn đầy năng lượng</p>
       </div>
       <div class="col-3 service"><img src="./images/section3/Rectangle2.png" alt="">
         <p class="title">Bữa Trưa</p>
-        <p class="content">Khởi động một ngày mới tràn đầy năng lượng</p>
+        <p class="content">Tiếp tục một ngày tràn đầy năng lượng</p>
       </div>
       <div class="col-3 service"><img src="./images/section3/Rectangle3.png" alt="">
         <p class="title">Bữa Tối</p>
-        <p class="content">Khởi động một ngày mới tràn đầy năng lượng</p>
+        <p class="content">Thưởng thức trọn vẹn món ăn</p>
       </div>
       <div class="col-3 service"><img src="./images/section3/Rectangle4.png" alt="">
         <p class="title">Yêu Cầu</p>
-        <p class="content">Khởi động một ngày mới tràn đầy năng lượng</p>
+        <p class="content">Phục vụ theo yêu cầu của riêng bạn</p>
       </div>
     </div>
   </div>
@@ -196,33 +198,33 @@
       <div class="col-6 dish">
         <ul class="leaders">
           <li><span class="dish_name">Bít tết bò Kobe</span><span class="dish_info">150.000VND</span></li>
-          <li><span class="dish_name">Gà nướng ngũ vị hương</span><span class="dish_info">150.000VND</span></li>
-          <li><span class="dish_name">Gà cay phô mai</span><span class="dish_info">150.000VND</span></li>
-          <li><span class="dish_name">Trứng tráng rau củ</span><span class="dish_info">150.000VND</span></li>
-          <li><span class="dish_name">Sừng trâu hầm nhân sâm</span><span class="dish_info">100.000VND</span></li>
-          <li><span class="dish_name">Sừng trâu hầm nhân sâm</span><span class="dish_info">100.000VND</span></li>
+          <li><span class="dish_name">Gà nướng ngũ vị hương</span><span class="dish_info">180.000VND</span></li>
+          <li><span class="dish_name">Gà cay phô mai</span><span class="dish_info">160.000VND</span></li>
+          <li><span class="dish_name">Trứng tráng rau củ</span><span class="dish_info">190.000VND</span></li>
+          <li><span class="dish_name">Sừng trâu hầm nhân sâm</span><span class="dish_info">120.000VND</span></li>
+          <li><span class="dish_name">Đuôi lươn xào tỏi ớt</span><span class="dish_info">100.000VND</span></li>
         </ul>
       </div>
       <div class="col-6 dish">
         <ul class="leaders">
-          <li><span class="dish_name">Bít tết bò Kobe</span><span class="dish_info">150.000VND</span></li>
-          <li><span class="dish_name">Gà nướng ngũ vị hương</span><span class="dish_info">150.000VND</span></li>
-          <li><span class="dish_name">Gà cay phô mai</span><span class="dish_info">150.000VND</span></li>
-          <li><span class="dish_name">Trứng tráng rau củ</span><span class="dish_info">150.000VND</span></li>
-          <li><span class="dish_name">Sừng trâu hầm nhân sâm</span><span class="dish_info">100.000VND</span></li>
-          <li><span class="dish_name">Sừng trâu hầm nhân sâm</span><span class="dish_info">100.000VND</span></li>
+          <li><span class="dish_name">Gà nướng khoai tây</span><span class="dish_info">150.000VND</span></li>
+          <li><span class="dish_name">Rau củ quả luộc</span><span class="dish_info">150.000VND</span></li>
+          <li><span class="dish_name">Sushi nướng</span><span class="dish_info">150.000VND</span></li>
+          <li><span class="dish_name">Cải thảo xào me</span><span class="dish_info">150.000VND</span></li>
+          <li><span class="dish_name">Phô mai que</span><span class="dish_info">100.000VND</span></li>
+          <li><span class="dish_name">gác bếp nhân xâm</span><span class="dish_info">100.000VND</span></li>
         </ul>
       </div>
     </div>
   </div>
   <div class="text-center btn_detail">
-    <button class="btn btn-dark" type="button">Xem chi tiết</button>
+    <button class="btn btn-dark" type="submit" formaction="menu.html">Xem chi tiết</button>
   </div>
 </section>
 <!--footer-->
 <footer class="container-fuild">
   <div class="maps-wrapper">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3022.260812859955!2d-73.990184!3d40.756288!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb134c693ac14a04c!2sThe+TimesCenter!5e0!3m2!1sen!2suk!4v1393485725496" width="100%" height="450" frameborder="0" style="border:0"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29787.29839579573!2d105.80871548521803!3d21.056188822371855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135aafe7260066b%3A0x4c2c988309aaa3db!2zSOG7kyBUw6J5!5e0!3m2!1svi!2s!4v1569003839599!5m2!1svi!2s" width="100%" height="450" frameborder="0" style="border:0"></iframe>
   </div>
   <div class="footer_area">
     <div class="footer_form">
