--- a/yummy/template-parts/topHeader.html
+++ b/yummy/template-parts/topHeader.html
@@ -1,11 +1,13 @@
 
 <!-- Top header-->
-<div class="top_header_area container-fuild">
-  <div class="row container">
-    <div class="col-5 col-sm-5">
-      <!-- icon-->
+<div class="top navbar text-white">
+  <div class="container-fluid top-content">
+    <ul class="nav top-left">
+      <li class="nav-item"><span class="fas fa-map-marker-alt"></span> Tây Hồ Hà Nội</li>
+      <li class="nav-item mr-menu"><span class="fas fa-mobile-alt"></span>0366312255</li>
+    </ul>
+    <ul class="nav top-right">
       <div class="top_social_bar"><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a><a href="#"><i class="fab fa-skype" aria-hidden="true"></i></a><a href="#"><i class="fab fa-dribbble" aria-hidden="true"></i></a></div>
-    </div>
-    <div class="col-7 col-sm-7"></div>
+    </ul>
   </div>
 </div>
