--- a/yummy/about.html
+++ b/yummy/about.html
@@ -28,13 +28,15 @@
 <header class="header_area container-fluid">
   <!--Top Header Area-->
   <!-- Top header-->
-  <div class="top_header_area container-fuild">
-    <div class="row container">
-      <div class="col-5 col-sm-5">
-        <!-- icon-->
+  <div class="top navbar text-white">
+    <div class="container-fluid top-content">
+      <ul class="nav top-left">
+        <li class="nav-item"><span class="fas fa-map-marker-alt"></span> Tây Hồ Hà Nội</li>
+        <li class="nav-item mr-menu"><span class="fas fa-mobile-alt"></span>0366312255</li>
+      </ul>
+      <ul class="nav top-right">
         <div class="top_social_bar"><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a><a href="#"><i class="fab fa-skype" aria-hidden="true"></i></a><a href="#"><i class="fab fa-dribbble" aria-hidden="true"></i></a></div>
-      </div>
-      <div class="col-7 col-sm-7"></div>
+      </ul>
     </div>
   </div>
   <!-- Menu-->
@@ -43,11 +45,11 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">TRANG CHỦ</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">GIỚI THIỆU</a></li>
-          <li class="nav-item"><a class="nav-link" href="menu.html">THỰC ĐƠN</a></li>
-          <li class="nav-item"><a class="nav-link" href="blog.html">BÀI VIẾT</a></li>
-          <li class="nav-item"><a class="nav-link" href="shop.html">CỬA HÀNG</a></li>
+          <li class="nav-item"><a class="page_1 nav-link" href="index.html">TRANG CHỦ</a></li>
+          <li class="nav-item"><a class="page_2 nav-link" href="about.html">GIỚI THIỆU</a></li>
+          <li class="nav-item"><a class="page_3 nav-link" href="menu.html">THỰC ĐƠN</a></li>
+          <li class="nav-item"><a class="page_4 nav-link" href="blog.html">BÀI VIẾT</a></li>
+          <li class="nav-item"><a class="page_5 nav-link" href="shop.html">CỬA HÀNG</a></li>
           <li class="nav-item-sp"><a class="nav-link nav-border" href="reservation.html">ĐẶT BÀN</a></li>
           <li class="nav-item-sp"><a class="nav-link nav-icon" href="cart.html"><i class="fas fa-cart-plus"></i></a></li>
           <li class="nav-item-sp"><a class="nav-link nav-icon" href="#"><i class="fas fa-search"></i></a></li>
@@ -170,7 +172,7 @@
 <!--footer-->
 <footer class="container-fuild">
   <div class="maps-wrapper">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3022.260812859955!2d-73.990184!3d40.756288!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb134c693ac14a04c!2sThe+TimesCenter!5e0!3m2!1sen!2suk!4v1393485725496" width="100%" height="450" frameborder="0" style="border:0"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29787.29839579573!2d105.80871548521803!3d21.056188822371855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135aafe7260066b%3A0x4c2c988309aaa3db!2zSOG7kyBUw6J5!5e0!3m2!1svi!2s!4v1569003839599!5m2!1svi!2s" width="100%" height="450" frameborder="0" style="border:0"></iframe>
   </div>
   <div class="footer_area">
     <div class="footer_form">
