--- a/yummy/cart.html
+++ b/yummy/cart.html
@@ -78,9 +78,9 @@
         </thead>
         <tbody>
           <tr class="cart-item">
-            <td class="product-thumbnail"><a href="#"><img class="img-fluid" src="./images/cart_Page/img1.jpg"></a></td>
-            <td class="product-name"><a href="#">Salad Hoa Quả</a></td>
-            <td class="product-price">120000</td>
+            <td class="product-thumbnail"><a href="#"><img class="img-fluid" src="./images/cart_Page/sp5.jpg"></a></td>
+            <td class="product-name"><a href="#">Bò bít tết Kobe</a></td>
+            <td class="product-price">150000</td>
             <td class="product-quantity">
               <div class="quantity">
                 <button class="qty-decrease" onclick="" type="button">-</button>
