--- a/yummy/checkOut.html
+++ b/yummy/checkOut.html
@@ -79,11 +79,11 @@
         <input class="form-control" id="exampleInputEmail1" type="text" aria-describedby="" placeholder="Nhập địa chỉ">
       </div>
       <div class="form-check">
-        <input class="form-check-input" id="defaultCheck1" type="checkbox" value="">
+        <input class="form-check-input" id="defaultCheck1" type="checkbox" value="" disabled>
         <label class="form-check-label" for="defaultCheck1">Tạo tài khoản</label>
       </div>
       <div class="form-check">
-        <input class="form-check-input" id="defaultCheck1" type="checkbox" value="">
+        <input class="form-check-input" id="defaultCheck1" type="checkbox" value="" disabled>
         <label class="form-check-label" for="defaultCheck1">Ship đến địa chỉ khác</label>
       </div>
       <div class="form-group note">
@@ -96,24 +96,24 @@
         <div class="title_my_cart text-center">GIỎ HÀNG CỦA BẠN</div>
         <div>
           <div class="row">
-            <div class="col-2 image_product"><img class="img-fluid" src="./images/cart_Page/img1.jpg"></div>
-            <div class="col-6 name_product">Salad hoa quả</div>
-            <div class="col-4 price_product">50000 VND</div>
+            <div class="col-2 image_product"><img class="img-fluid" src="./images/cart_Page/sp5.jpg"></div>
+            <div class="col-6 name_product">Bò bít tết Kobe</div>
+            <div class="col-4 price_product">150.000 VND</div>
           </div>
           <hr>
           <div class="row">
             <div class="col-8 name">Tạm tính</div>
-            <div class="col-4 price">50000 VND</div>
+            <div class="col-4 price">150.000 VND</div>
           </div>
           <hr>
           <div class="row">
             <div class="col-8 name">Phí vận chuyển</div>
-            <div class="col-4 price">5000 VND</div>
+            <div class="col-4 price">15.000 VND</div>
           </div>
           <hr>
           <div class="row">
             <div class="col-8 name_total">Tổng tiền</div>
-            <div class="col-4 price_total">55000 VND</div>
+            <div class="col-4 price_total">165.000 VND</div>
           </div>
         </div>
         <div class="pay_area">
@@ -131,8 +131,12 @@
             <input class="form-check-input" id="exampleRadios3" type="radio" name="exampleRadios" value="option3">
             <label class="form-check-label" for="exampleRadios3">Thẻ ATM nội địa/ Internet Banking</label>
           </div>
-          <div class="text-center"> 
-            <button class="btn">ĐẶT MUA</button>
+          <div class="d-flex">
+            <div class="btn_left"> 
+              <button class="btn btn_1">Đặt mua</button>
+            </div>
+            <div class="btn_right"><a href="shop.html">
+                <button class="btn btn_2" href="shop.html">Tiếp tục mua hàng</button></a></div>
           </div>
         </div>
       </div>
