--- a/yummy/index.html
+++ b/yummy/index.html
@@ -165,7 +165,7 @@
 <section class="section_3 services container">
   <div>
     <p class="heading text-center"> <span style="color:#FD5B00;">Dịch vụ </span>của chúng tôi</p>
-    <p class="content text-center">Với các đầu bếp hàng đầu thế giới, chúng tôi đã tạo ra những “tác phẩm nghệ thuật” !</p>
+    <p class="content text-center">Làm hài lòng khách hàng là điều chúng tôi đặt lên hàng đầu, khách hàng chính là người quyền lực nhất!</p>
   </div>
   <div class="service_content">
     <div class="row text-center">
@@ -217,9 +217,8 @@
       </div>
     </div>
   </div>
-  <div class="text-center btn_detail">
-    <button class="btn btn-dark" type="submit" formaction="menu.html">Xem chi tiết</button>
-  </div>
+  <div class="text-center btn_detail"><a href="menu.html">
+      <button class="btn btn-dark" type="submit" formaction="menu.html">Xem chi tiết</button></a></div>
 </section>
 <!--footer-->
 <footer class="container-fuild">
