--- a/yummy/singerProduct.html
+++ b/yummy/singerProduct.html
@@ -79,11 +79,11 @@
       </div>
       <div class="col-6 product_content_area">
         <p class="name_product">Bít Tết Bò Kobe</p>
-        <p class="price_product">50.000 vnd</p>
-        <p class="sub_product">Morbi ut arcu dolor. Maecenas id nulla nec nibh viverra vehicula. Cras feugiat, corper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui, magna eu lacinia ullamcorper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui.</p>
+        <p class="price_product">150.000 vnd</p>
+        <p class="sub_product">Bò bít tết là 1 món ăn được rất nhiếu người ưa chuộng, bởi mùi vị thơm ngon ngọt của miếng thịt bò kết hợp với nước sốt khiến ai cũng mê mẩn. Món bò bít tết rất dễ làm , bạn có thể làm bò bít tết tại nhà hoặc có thưởng thức tại các nhà hàng .</p>
         <hr>
         <p class="ingredients">Thành phần chính: 
-          <p class="igd">- Dứa gai</p>
+          <p class="igd">- 500g bò Kobe</p>
           <p class="igd">- Kiwi</p>
           <p class="igd">- Hạt điều</p>
         </p>
@@ -93,6 +93,8 @@
           <button class="qty-increase" onclick="" type="button">+</button>
           <div class="btn_chose"><a href="cart.html">
               <button class="btn" type="submit">Thêm vào giỏ hàng</button></a></div>
+          <div class="btn_return"><a href="shop.html">
+              <button class="btn" type="submit">Tiếp tục mua hàng</button></a></div>
         </div>
         <hr>
         <div class="tag">Tags: Món chính</div>
@@ -130,7 +132,9 @@
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Viết bình luận"></textarea>
     </div>
     <div class="text-left">
-      <button class="btn" type="submit">Hoàn thành</button>
+      <div class="btn_chose">
+        <button class="btn" type="submit">Hoàn thành</button>
+      </div>
     </div>
   </div>
 </section>
