--- a/CartDeck/cart.html
+++ b/CartDeck/cart.html
@@ -56,11 +56,17 @@
 <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel" src="js/header.js"></script>
+<script type="text/babel" src="js/table.js"></script>
+<script type="text/babel" src="js/footer.js"></script>
+
 
 <script type="text/babel">
   ReactDOM.render(
     <main>
         <MyHeader />
+        <MyTableCart />
+        <MyFooter />
+
     </main>,
     document.getElementById('root')
   );
