--- a/Noel/index.html
+++ b/Noel/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <audio controls loop autoplay="true">
+    <audio controls autoplay loop>
+        <source src="music/Santa-Claus-Sound-Effect.mp3" type="audio/mpeg">
         <source src="music/Santa-Claus-Sound-Effect.mp3" type="audio/mpeg">
     </audio>
     <div class="santa_l">
@@ -50,7 +51,7 @@
     </div>
 
     <div class="btn_gift">
-        <button onclick="window.location.href='gift.html'">open now!</button>
+        <button onclick="window.location.href='gift.html'">Open now!</button>
     </div>
     <!-- copy snow -->
     <div class="winter-is-coming">
