--- a/Noel/gift.html
+++ b/Noel/gift.html
@@ -9,10 +9,10 @@
 
 </head>
 <body>
-	<!-- <iframe id="music" src="music/little-donkey-just-piano.mp3" loop allow="autoplay" style="display:none" id="iframeAudio"></iframe> -->
-	<audio controls loop autoplay="true">
+	<iframe id="music" src="music/little-donkey-just-piano.mp3" loop allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+	<!-- <audio controls loop autoplay="true">
         <source id="music" src="music/little-donkey-just-piano.mp3" type="audio/mpeg">
-    </audio>
+    </audio> -->
 	<div class="background">
 		<div class="pine_png">
 			<img src="img/pine.png">
