--- a/Noel/index.html
+++ b/Noel/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <audio controls autoplay loop>
+    <!-- <audio controls autoplay loop>
         <source src="music/Santa-Claus-Sound-Effect.mp3" type="audio/mpeg">
-    </audio>
+    </audio> -->
+    <iframe id="music" src="music/Santa-Claus-Sound-Effect.mp3" loop allow="autoplay" style="display:none" id="iframeAudio"></iframe>
     <div class="santa_l">
         <img class="santa" src="img/santa.png"/>
     </div>
